# crewai-arxiv

./: .env.example  .gitignore  100_sync_repo.sh  README.md  bilingual-learning.md  precision-medicine.md  pyproject.toml  self-service-analytics.md
src/arxiv/: crew.py  main.py
